<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:focusable="true"
        android:background="@color/colorToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintEnd_toStartOf="@+id/filter"
            android:background="@drawable/ic_delete_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/filter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_filter_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left30"
            app:layout_constraintStart_toEndOf="@+id/delete"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/search"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/search_by_keywords"
            android:imeOptions="actionSearch"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_rec_transparent_white_12"
            app:layout_constraintStart_toEndOf="@+id/left30"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="42dp"/>
        <LinearLayout
            android:id="@+id/iv_search_keyword"
            android:layout_width="50dp"
            android:layout_height="42dp"
            app:layout_constraintEnd_toEndOf="@+id/search"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toEndOf="@+id/search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/search_right_top_left"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_search" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/midLayout"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:layout_width="match_parent"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:background="@drawable/boder_list"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:text="@string/nickname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left55"
            app:layout_constraintStart_toEndOf="@+id/left25"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/distance"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right30"
            app:layout_constraintStart_toEndOf="@+id/left55"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/rating"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right15"
            app:layout_constraintStart_toEndOf="@+id/right30"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/hours"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/right15"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.23" />

        <TextView
            android:id="@+id/img_avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:text="@string/physical"
            android:gravity="center"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midLayout"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>