<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/colorToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/settings"
            android:layout_marginStart="32dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainScroll"
        app:layout_constraintTop_toBottomOf="@+id/topLayout"
        android:layout_width="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/tx_register"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:clickable="true"
                android:orientation="vertical"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/ic_register"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_register"
                        tools:ignore="ContentDescription" />

                    <View
                        android:id="@+id/divider5"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:text="@string/register_service"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tx_edit_pro_trainer"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_edit_profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_user" />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:text="@string/view_edit_profile"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tx_block"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_block"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_block" />

                    <View
                        android:id="@+id/divider7"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"

                        android:text="@string/block_unblock"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tx_cus_support_trainner"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ic_customer_support"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_customer_support" />

                    <View
                        android:id="@+id/divider_cus"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"

                        android:text="@string/customer_support"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tx_lang_setting"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgv_lang_setting"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_language" />

                    <View
                        android:id="@+id/divider8"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:text="@string/language_setting"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_translate_setting"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:clickable="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/ic_translate" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:text="@string/translation_setting"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tx_sign_up"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_signup" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:text="@string/sign_up_my_friends"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgv_sign_up"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="50dp"
                        android:src="@drawable/s_ic_signup" />

                    <View
                        android:id="@+id/divider9"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorText" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:baselineAligned="false"
                        android:text="@string/Logout"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:textStyle="bold"

                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>